<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/divider_line"
        android:showDividers="middle"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:background="@color/white"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/device_model_number_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device_model_number"
                android:textSize="16sp"
                android:textColor="@color/color_454a4d"/>

            <TextView
                android:id="@+id/device_model_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:textSize="12sp"
                android:textColor="@color/color_999999"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:background="@color/white"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/device_android_ver_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device_android_ver"
                android:textSize="16sp"
                android:textColor="@color/color_454a4d"/>

            <TextView
                android:id="@+id/device_android_ver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:textSize="12sp"
                android:textColor="@color/color_999999"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:background="@color/white"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/device_builder_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device_os_build"
                android:textSize="16sp"
                android:textColor="@color/color_454a4d"/>

            <TextView
                android:id="@+id/device_builder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:textSize="12sp"
                android:textColor="@color/color_999999"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:background="@color/white"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/device_processor_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device_os_cpu"
                android:textSize="16sp"
                android:textColor="@color/color_454a4d"/>

            <TextView
                android:id="@+id/device_processor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:textSize="12sp"
                android:textColor="@color/color_999999"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <RelativeLayout
            android:id="@+id/setting_language_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:background="@drawable/layout_selector">

            <TextView
                android:id="@+id/setting_language_desc"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/language_setting"
                android:textColor="@color/color_454a4d"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@mipmap/arrow_right" />

        </RelativeLayout>

    </LinearLayout>
</ScrollView>